--- a/app.json
+++ b/app.json
@@ -1,29 +1,82 @@
 {
   "expo": {
-    "name": "SGSFinal",
-    "slug": "SGSFinal",
-    "version": "1.0.0",
+    "name": "SGS Suite",
+    "slug": "sgs-suite",
+    "version": "1.2.1",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "ios": {
-      "supportsTablet": true
-    },
     "android": {
+      "package": "com.sgs.attendance",
+      "versionCode": 4,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "permissions": [
+        "ACCESS_FINE_LOCATION",
+        "ACCESS_COARSE_LOCATION",
+        "ACCESS_BACKGROUND_LOCATION",
+        "FOREGROUND_SERVICE",
+        "FOREGROUND_SERVICE_LOCATION",
+        "WAKE_LOCK",
+        "CAMERA",
+        "NFC",
+        "VIBRATE",
+        "INTERNET",
+        "ACCESS_NETWORK_STATE",
+        "REQUEST_IGNORE_BATTERY_OPTIMIZATIONS",
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.ACCESS_COARSE_LOCATION",
+        "android.permission.ACCESS_FINE_LOCATION",
+        "android.permission.ACCESS_BACKGROUND_LOCATION",
+        "android.permission.FOREGROUND_SERVICE",
+        "android.permission.FOREGROUND_SERVICE_LOCATION",
+        "android.permission.WAKE_LOCK",
+        "android.permission.INTERNET",
+        "android.permission.ACCESS_NETWORK_STATE",
+        "android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS"
+      ]
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Necesitamos acceso a tu camara para escanear codigos QR"
+        }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "SGS Sentinel necesita acceso continuo a tu ubicación para tracking GPS en tiempo real, incluso cuando la app está en segundo plano. Esto es esencial para el sistema de seguridad.",
+          "isAndroidBackgroundLocationEnabled": true,
+          "isAndroidForegroundServiceEnabled": true,
+          "isIosBackgroundLocationEnabled": true
+        }
+      ],
+      [
+        "expo-task-manager",
+        {}
+      ]
+    ],
+    "ios": {
+      "bundleIdentifier": "com.sgs.attendance",
+      "infoPlist": {
+        "UIBackgroundModes": [
+          "location",
+          "background-processing",
+          "background-fetch"
+        ],
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "SGS Sentinel necesita acceso continuo a tu ubicación para tracking GPS en tiempo real",
+        "NSLocationWhenInUseUsageDescription": "SGS Sentinel necesita acceso a tu ubicación para funciones de asistencia y tracking",
+        "NSLocationAlwaysUsageDescription": "SGS Sentinel necesita acceso continuo a tu ubicación para tracking GPS en tiempo real"
+      }
     }
   }
 }
