--- a/package.json
+++ b/package.json
@@ -4,15 +4,40 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-picker/picker": "2.11.1",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.8",
+    "axios": "^1.12.2",
     "expo": "~54.0.10",
+    "expo-av": "^16.0.7",
+    "expo-background-fetch": "^14.0.7",
+    "expo-battery": "~10.0.7",
+    "expo-camera": "~17.0.8",
+    "expo-constants": "~18.0.9",
+    "expo-device": "^8.0.9",
+    "expo-file-system": "^19.0.17",
+    "expo-haptics": "~15.0.7",
+    "expo-location": "~19.0.7",
+    "expo-notifications": "^0.32.12",
     "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "^6.0.7",
+    "expo-task-manager": "^14.0.7",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-nfc-manager": "^3.17.1",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "socket.io-client": "^4.8.1"
   },
   "private": true
 }
